class Snack {
  final String name;
  final double price;
  final String image;

  const Snack({
    required this.name,
    required this.price,
    required this.image,
  });
}
